--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,9 @@
   font-size: 16px;
   text-decoration: none;
 }
-
+.header .nav .active {
+  text-decoration: underline;
+}
 .login {
   color: white;
   font-size: 16px;
